# leftstick2mouse

./: CMakeLists.txt  README.md
src/: main.c
src/logic/: logic.c  logic.h
src/ui/: ui.c  ui.h
